Handle non OPML 2.0 compliant directory correctly.

digitalpodcast is not using rssUrl attribute.

BUG:270206